--- a/very new/shoppingcart.html
+++ b/very new/shoppingcart.html
@@ -113,7 +113,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             20
            </td>
            <td class="total">
-            <span id="smallTotal1"></span> ?
+            <span id="smallTotal1"></span> 20
            </td>
           </tr>
 
@@ -127,7 +127,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 
         <div style= "text-align:right ;padding-right:250px">
-          <p >Total price is $ <span id="totalPrice">0</span>.00 .</p>
+          <p >Total price is $ <span id="totalPrice">20</span>.00 .</p>
         </div>
 
 
