--- a/very new/signup.html
+++ b/very new/signup.html
@@ -59,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <li><a href="product.html">Product</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="signup.html">Signup</a></li>
-                    <li><a href="shoppingchrt.html">Shopping Chrt</a></li>
+                    <li><a href="shoppingcart.html">Shopping Cart</a></li>
                 </ul>
             </div>
             <!-- script for menu -->
